<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:gravity="center"
    android:padding="5dp">
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
           android:layout_marginTop="60dp"
           android:layout_marginLeft="5dp">
     
    <TextView 
        android:id="@+id/monday"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/monday_abbr"/> 
        
    <TextView 
        android:id="@+id/tuesday"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/tuesday_abbr"/> 
        
        <TextView 
        android:id="@+id/wednesday"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/wednesday_abbr"/> 
        
        <TextView 
        android:id="@+id/thursday"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/thursday_abbr"/> 
        
        <TextView 
        android:id="@+id/friday"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/friday_abbr"/> 
        
        <TextView 
        android:id="@+id/saturday"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/saturday_abbr"/> 
        
        <TextView 
        android:id="@+id/sunday"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/sunday_abbr"/> 
        
    </LinearLayout>
    
    <GridView 
        android:id="@+id/grid" 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:numColumns="7"
        android:stretchMode="columnWidth" 
        android:horizontalSpacing="5dp"
        android:verticalSpacing="5dp"
        android:layout_marginBottom="60dp">
        
    </GridView>
    

</LinearLayout>
