<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_vertical"
    android:animateLayoutChanges="false"
    android:gravity="center_vertical"
    android:orientation="horizontal" >

    <TextView
        android:id="@+id/start_dateTV"
        style="@style/TextAppearance.EditEvent_Value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_date" />

    <Button
        android:id="@+id/start_date"
        style="@style/TextAppearance.EditEvent_SpinnerButton"
        android:layout_width="0px"
        android:text="@string/date_form_cart"
        android:layout_height="wrap_content"
        android:layout_weight="7" />

    <TextView
        android:id="@+id/end_dateTV"
        style="@style/TextAppearance.EditEvent_Value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/end_date" />

    <Button
        android:id="@+id/end_date"
        style="@style/TextAppearance.EditEvent_SpinnerButton"
        android:layout_width="0px"
        android:text="@string/date_form_cart"
        android:layout_height="wrap_content"
        android:layout_weight="7" />

</LinearLayout>